Added instructions for joining the game.

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -13,6 +13,13 @@
 </head>
 <body>
     <div id="gameAreaWrapper">
+        <div id="connectInstructions">
+          <span class="title">Join the Game!</span>
+          <ol>
+            <li>Connect to ESSID ParaDrop</li>
+            <li>Open http://home.paradrop.org/chutes/cells</li>
+          </ol>
+        </div>
         <div id="status"><span class="title">Leaderboard</span></div>
         <div class="chatbox" id="chatbox">
             <ul id="chatList" class="chat-list"></ul>
